--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 	</head>
 	<body>
 		<h1> this is my first project </h1>
-		<p> how are you all!
-		    had your dinner!
-		</p>
+		<p> how are you all! had your dinner! </p>
 	</body>
 </html>
 
